test/ui/tests/cannot-apply.stderr
error[E031]: expected type `_ -> _` but got type `extern.core.nat.Nat`
 --> ${DIRECTORY}/cannot-apply.lushui:3:21
  |
3 | Abomination: Type = 0 1
  |                     ^ has wrong type
  |
 --> ${DIRECTORY}/cannot-apply.lushui:3:23
  |
3 | Abomination: Type = 0 1
  |                       - applied to this
  |

error: aborting due to previous error
 note: the error E031 has a detailed explanation
 help: run `lushui explain E031` to view it

